force-app/main/default/objects/Forecast_Quota__c/Forecast_Quota__c.object-meta.xml
<CustomObject>
    <label>Forecast Quota</label>
    <pluralLabel>Forecast Quotas</pluralLabel>
    <nameField>
        <label>Quota Number</label>
        <type>AutoNumber</type>
        <displayFormat>FQ-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >Lightweight quota record for forecasting-only customers. Stores target amount per user per period without requiring the full Incentives module Comp_Plan/Quota setup.</description>
</CustomObject>