force-app/main/default/objects/Forecast_Quota__c/fields/Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Amount__c</fullName>
    <label>Achieved Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>