force-app/main/default/objects/Forecast_Quota__c/fields/Attainment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Pct__c</fullName>
    <label>Attainment %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Achieved / Target. Updated by system.</description>
</CustomField>