force-app/main/default/objects/Forecast_Quota__c/fields/Forecast_Participant__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Participant__c</fullName>
    <label>Forecast Participant</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Participant__c</referenceTo>
    <relationshipLabel>Forecast Quotas</relationshipLabel>
    <relationshipName>Forecast_Quotas</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>