force-app/main/default/objects/Forecast_Quota__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <label>Forecast Period</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Forecast Quotas</relationshipLabel>
    <relationshipName>Forecast_Quotas</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>