force-app/main/default/objects/Forecast_Quota__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label
        >Draft</label></value>
            <value><fullName>Active</fullName><default>false</default><label
        >Active</label></value>
            <value><fullName>Closed</fullName><default>false</default><label
        >Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>