force-app/main/default/objects/Forecast_Quota__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <label>Target Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>