force-app/main/default/objects/Forecast_Quota__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Forecast Quotas</relationshipLabel>
    <relationshipName>Forecast_Quotas</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>